[project]
name = "beku-stackabletech"
version = "0.0.9-dev"
authors = [
    { name = "Razvan Mihai", email = "razvan.mihai@stackable.tech" }
]
description = "Test suite expander for Stackable Kuttl tests."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "Jinja2>=3.1.2",
    "PyYAML>=6.0"
]
[project.optional-dependencies]
lint = ['ruff==0.0.275', 'mypy==1.4.0']

[project.scripts]
beku = "beku.main:main"

[project.urls]
"Homepage" = "https://github.com/stackabletech/beku.py"
"Bug Tracker" = "https://github.com/stackabletech/beku.py/issues"

[tool.ruff]
# Allow lines to be as long as 120 characters.
line-length = 120

[tool.mypy]
exclude = ['examples/']
