[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "beku-stackabletech"
dynamic = ["version"]
authors = [{ name = "Razvan Mihai", email = "razvan.mihai@stackable.tech" }]
description = "Test suite expander for Stackable Kuttl tests."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = ["Jinja2>=3.1.2", "PyYAML>=6.0"]

[project.optional-dependencies]
lint = ['ruff>=0.4', 'mypy>=1.10']
publish = ['twine>=5.0', 'build>=1.2']

[project.scripts]
beku = "beku.main:main"

[project.urls]
"Homepage" = "https://github.com/stackabletech/beku.py"
"Bug Tracker" = "https://github.com/stackabletech/beku.py/issues"

[tool.ruff]
# Allow lines to be as long as 120 characters.
line-length = 120

[tool.mypy]
exclude = ['examples/']

[tool.setuptools.dynamic]
version = { attr = "beku.version.__version__" }
