[metadata]
name = beku
version = 0.0.1
author = Razvan Mihai
author_email = razvan.mihai@stackable.tech
description = Test suite expander for Stackable Kuttl tests.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/stackabletech/beku.py

[options]
packages = find:
python_requires = >= 3.7
include_package_data = False
