[metadata]
name = beku
version = 0.0.5
author = Razvan Mihai
author_email = razvan.mihai@stackable.tech
description = Test suite expander for Stackable Kuttl tests.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/stackabletech/beku.py

[options]
packages = find:
package_dir =
            = src
python_requires = >= 3.7
include_package_data = False
install_requires =
  Jinja2>="3.1.2"
  PyYAML>="6.0"

[options.packages.find]
where = src
